# Antonio-Rincon

./: .editorconfig  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  biome.json  package-lock.json  package.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  release.yml
apps/api/: README.md  pyproject.toml
apps/api/app/: main.py
apps/api/app/api/: deps.py  permissions.py
apps/api/app/api/routes/: ai.py  audit.py  auth.py  billing.py  contacts.py  dashboard.py  leads.py  memberships.py  onboarding.py  opponents.py  public.py  reports.py  tasks.py  tenants.py
apps/api/app/core/: config.py  security.py
apps/api/app/db/: README.md  bootstrap.py  models.py  session.py
apps/api/app/domain/: models.py
apps/api/app/schemas/: ai.py  audit.py  auth.py  billing.py  contacts.py  dashboard.py  memberships.py  onboarding.py  opponents.py  public.py  reports.py  settings.py  tasks.py  tenant.py
apps/api/app/services/: ai_service.py  auth_service.py  crud_service.py  dashboard_service.py  membership_service.py  onboarding_service.py  plan_service.py  public_service.py  report_service.py  store.py  tenant_service.py
apps/api/tests/: test_auth_and_core.py  test_operational_routes.py
docs/: ARCHITECTURE.md  OPERATIONS.md  README.md  RELEASE_CHECKLIST.md  ROADMAP.md
scripts/: bootstrap_api_runtime.py  browser-audit.cmd  browser-audit.mjs  build-web.cmd  build-web.mjs  build-web.ps1  bump-version.cmd  bump-version.ps1  check-changelog-version.ps1  check-changelog.ps1  check-doc-paths.ps1  (+61 more)
(+22 files in other folders)
